--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -25,6 +25,7 @@ Solutions of leetcode coding problems
         25.Construct Binary Tree from Preorder and Inorder Traversal (same as 24)
         27.Convert Sorted Array to Binary Search Tree(similar as 24, more simple, 递归折半)
         29.Copy List with Random Pointer(制作重复链表，复制随机指针，断开重复链表。注意null判断)
+        39.Flatten Binary Tree to Linked List(递归，左子树和右子树都弄平，找到左子树的叶子，令其右子指针指向弄平的右子树，然后根的右子指针指向左子树，左子指针指向空)
         .Maximum Subarray (DP)
         .Trapping Rain Water(每个柱能储水取决于两侧最高柱高度较短的和当前柱高度差。两种思路：1.DP找到每个柱的左最高和右最高；2.先找最高的柱分成两半，两边向中间算。相似26)
 1. Need to do more times
@@ -38,6 +39,7 @@ Solutions of leetcode coding problems
         33.Divide Two Integers(位移操作达到指数级优化)(类似Pow(x, n)，sqrt(x))
         34.Edit Distance(动规+滚动数组)
         35.Evaluate Reverse Polish Notation(堆栈，字符串操作)
+        38.First Missing Positive(木桶排序，数组元素值作为存放的index，最后看哪个index上对应的不是相应的值，说明缺失那个值。负数，0，大于数组长度的正数都不处理，等待被换。)
         .Pow(x, n)(二分：half=Pow(x, n/2); Pow(x, n)=half x half x Pow(x, n%2)， 类似33，sqrt(x))
         .Sqrt(x)(从b=1到e=x/2二分寻找:m=(b+e)/2, m*m最接近x时返回mid。)
 2. Time consuming
