--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -42,6 +42,7 @@ Solutions of leetcode coding problems
         35.Evaluate Reverse Polish Notation(堆栈，字符串操作)
         38.First Missing Positive(木桶排序，数组元素值作为存放的index，最后看哪个index上对应的不是相应的值，说明缺失那个值。负数，0，大于数组长度的正数都不处理，等待被换。)
         41.Generate Parentheses(深搜+目标递减)
+        42.Gray Code(递归：从n-1位到n位=原数列+原数列逆序后前面加1)
         .Pow(x, n)(二分：half=Pow(x, n/2); Pow(x, n)=half x half x Pow(x, n%2)， 类似33，sqrt(x))
         .Sqrt(x)(从b=1到e=x/2二分寻找:m=(b+e)/2, m*m最接近x时返回mid。)
 2. Time consuming
