--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -27,6 +27,7 @@ Solutions of leetcode coding problems
         29.Copy List with Random Pointer(制作重复链表，复制随机指针，断开重复链表。注意null判断)
         39.Flatten Binary Tree to Linked List(递归，左子树和右子树都弄平，找到左子树的叶子，令其右子指针指向弄平的右子树，然后根的右子指针指向左子树，左子指针指向空)
         40.Gas Station 
+        43.Implement strStr()(暴力算法)
         .Maximum Subarray (DP)
         .Trapping Rain Water(每个柱能储水取决于两侧最高柱高度较短的和当前柱高度差。两种思路：1.DP找到每个柱的左最高和右最高；2.先找最高的柱分成两半，两边向中间算。相似26)
 1. Need to do more times
