--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -27,7 +27,7 @@ Solutions of leetcode coding problems
         29.Copy List with Random Pointer(制作重复链表，复制随机指针，断开重复链表。注意null判断)
         39.Flatten Binary Tree to Linked List(递归，左子树和右子树都弄平，找到左子树的叶子，令其右子指针指向弄平的右子树，然后根的右子指针指向左子树，左子指针指向空)
         40.Gas Station 
-        43.Implement strStr()(暴力算法)
+        43.Implement strStr()(暴力算法，要学KMP算法)
         .Maximum Subarray (DP)
         .Trapping Rain Water(每个柱能储水取决于两侧最高柱高度较短的和当前柱高度差。两种思路：1.DP找到每个柱的左最高和右最高；2.先找最高的柱分成两半，两边向中间算。相似26)
 1. Need to do more times
@@ -57,7 +57,7 @@ Solutions of leetcode coding problems
         .Search in Rotated Sorted ArrayII(二分查找，确定递增区间，注意边界)
 3. Difficult
         
-        10. Best Time to Buy and Sell Stock III (最大M段子和, 两侧DP)
+        10. Best Time to Buy and Sell Stock III (两侧DP, 要学最大M段子和解法)
         14. Binary Tree Maximum Path Sum
         26.Container With Most Water (容积取决于短板和间隔，greedy每次保证不减, 两头夹逼测试，间隔在缩短，就要保证短板在增高。夹逼过程还可以剪枝。)
         28.Convert Sorted List to Binary Search Tree (递归折半，全局变量遍历链表)
