--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -52,6 +52,8 @@ Solutions of leetcode coding problems
         24.Construct Binary Tree from Inorder and Postorder Traversal (递归，用inorder中左右子树长度确定postorder中左右子树的分割)
         36.Find Minimum in Rotated Sorted Array(二分查找，确定递增区间，注意边界)
         37.Find Minimum in Rotated Sorted ArrayII(二分查找，确定递增区间，注意边界)
+        44.Insert Interval(注意边界)
+        .Merge Intervals(注意边界)
         .Search Insert Position(二分查找，确定递增区间，注意边界)
         .Search in Rotated Sorted Array(二分查找，确定递增区间，注意边界)
         .Search in Rotated Sorted ArrayII(二分查找，确定递增区间，注意边界)
