--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -53,6 +53,7 @@ Solutions of leetcode coding problems
         36.Find Minimum in Rotated Sorted Array(二分查找，确定递增区间，注意边界)
         37.Find Minimum in Rotated Sorted ArrayII(二分查找，确定递增区间，注意边界)
         44.Insert Interval(注意边界)
+        45.Merge Intervals(难点：排序intervals)
         .Merge Intervals(注意边界)
         .Search Insert Position(二分查找，确定递增区间，注意边界)
         .Search in Rotated Sorted Array(二分查找，确定递增区间，注意边界)
