--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -30,6 +30,8 @@ Solutions of leetcode coding problems
         43.Implement strStr()(暴力算法，要学KMP算法)
         .Maximum Subarray (DP)
         .Merge Two Sorted Lists(链表排序，合并)
+        .Merge k Sorted Lists(链表排序，合并)
+        .Merge Sorted Array(数组排序，合并)
         .Trapping Rain Water(每个柱能储水取决于两侧最高柱高度较短的和当前柱高度差。两种思路：1.DP找到每个柱的左最高和右最高；2.先找最高的柱分成两半，两边向中间算。相似26)
 1. Need to do more times
     
