--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -28,6 +28,7 @@ Solutions of leetcode coding problems
         39.Flatten Binary Tree to Linked List(递归，左子树和右子树都弄平，找到左子树的叶子，令其右子指针指向弄平的右子树，然后根的右子指针指向左子树，左子指针指向空)
         40.Gas Station 
         43.Implement strStr()(暴力算法，要学KMP算法)
+        46.Integer to Roman(数操作)
         .Maximum Subarray (DP)
         .Merge Two Sorted Lists(链表排序，合并)
         .Merge k Sorted Lists(链表排序，合并)
