--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -51,6 +51,8 @@ Solutions of leetcode coding problems
         41.Generate Parentheses(深搜+目标递减)
         42.Gray Code(递归：从n-1位到n位=原数列+原数列逆序后前面加1)
         47.Interleaving String(动规+滚数：res[i][j]=res[i-1][j]&&s1(i-1)==s3(i+j-1)||res[i][j-1]&&s2(j-1)==s3(i+j-1))
+        48.Jump Game(贪心算法：判断之前更新的最远能覆盖距离能否覆盖到当前，如果不能返回false,否则继续更新最远能覆盖到的距离)
+        49.Jump Game II(贪心算法：第一步能走到cover，从0到cover算能走到的最远距离即为第二步能走的多远，再记录在cover，从上一个cover到这个新cover再算第三步能走多远。。。)
         .Pow(x, n)(二分：half=Pow(x, n/2); Pow(x, n)=half x half x Pow(x, n%2)， 类似33，sqrt(x))
         .Sqrt(x)(从b=1到e=x/2二分寻找:m=(b+e)/2, m*m最接近x时返回mid。)
 2. Time consuming
