--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -29,7 +29,7 @@ Solutions of leetcode coding problems
         40.Gas Station 
         43.Implement strStr()(暴力算法，要学KMP算法)
         46.Integer to Roman(数操作)
-        .Maximum Subarray (DP)
+        51.Length of Last Word(字符串操作)
         .Merge Two Sorted Lists(链表排序，合并)
         .Merge k Sorted Lists(链表排序，合并)
         .Merge Sorted Array(数组排序，合并)
@@ -53,6 +53,7 @@ Solutions of leetcode coding problems
         47.Interleaving String(动规+滚数：res[i][j]=res[i-1][j]&&s1(i-1)==s3(i+j-1)||res[i][j-1]&&s2(j-1)==s3(i+j-1))
         48.Jump Game(贪心算法：判断之前更新的最远能覆盖距离能否覆盖到当前，如果不能返回false,否则继续更新最远能覆盖到的距离)
         49.Jump Game II(贪心算法：第一步能走到cover，从0到cover算能走到的最远距离即为第二步能走的多远，再记录在cover，从上一个cover到这个新cover再算第三步能走多远。。。)
+        .Maximum Subarray (动规+贪心)
         .Pow(x, n)(二分：half=Pow(x, n/2); Pow(x, n)=half x half x Pow(x, n%2)， 类似33，sqrt(x))
         .Sqrt(x)(从b=1到e=x/2二分寻找:m=(b+e)/2, m*m最接近x时返回mid。)
 2. Time consuming
@@ -74,4 +75,4 @@ Solutions of leetcode coding problems
         26.Container With Most Water (容积取决于短板和间隔，greedy每次保证不减, 两头夹逼测试，间隔在缩短，就要保证短板在增高。夹逼过程还可以剪枝。)
         28.Convert Sorted List to Binary Search Tree (递归折半，全局变量遍历链表)
         32.Distinct Subsequences(动规+滚动数组)
-        . Largest Rectangle in Histogram(由每个柱高度决定的矩阵的宽度是距它最左和最右并不比它矮的柱之间的距离。one way is O(n^2). 高效的方法是维护递增堆栈，直到当前柱太矮，处理由之前比它高的每一个柱决定的面积：出栈一个柱，以它为高度；相应的矩形宽度是从当前矮柱的前一格到当前栈顶的柱的后一格（这两个柱比它矮，而其间的所有柱都比它高，都已出栈）。)
+        50.Largest Rectangle in Histogram(由每个柱高度决定的矩阵的宽度是距它最左和最右并不比它矮的柱之间的距离。one way is O(n^2). 高效的方法是维护递增堆栈，直到当前柱太矮，处理由之前比它高的每一个柱决定的面积：出栈一个柱，以它为高度；相应的矩形宽度是从当前矮柱的前一格到当前栈顶的柱的后一格（这两个柱比它矮，而其间的所有柱都比它高，都已出栈）。)
