--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -32,6 +32,7 @@ Solutions of leetcode coding problems
         51.Length of Last Word(字符串操作)
         52.Letter Combinations of a Phone Number(深搜：暴力组合)
         53.Linked List Cycle
+        54.Linked List Cycle II
         .Merge Two Sorted Lists(链表排序，合并)
         .Merge k Sorted Lists(链表排序，合并)
         .Merge Sorted Array(数组排序，合并)
