--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -59,6 +59,7 @@ Solutions of leetcode coding problems
         49.Jump Game II(贪心算法：第一步能走到cover，从0到cover算能走到的最远距离即为第二步能走的多远，再记录在cover，从上一个cover到这个新cover再算第三步能走多远。。。)
         56.Longest Consecutive Sequence(HashMap visited)
         57.Longest Palindromic Substring(递归：p[i][j] = s(i)==s(j)&&(j-i<=2||p[i+1][j-1])+贪心找最长)
+        58.Longest Substring Without Repeating Characters (用map记录字符上次出现的位置，start记录上次没有重复的位置，maxlen贪心记录每次的无重复序列长度)
         .Maximum Subarray (动规+贪心)
         .Pow(x, n)(二分：half=Pow(x, n/2); Pow(x, n)=half x half x Pow(x, n%2)， 类似33，sqrt(x))
         .Sqrt(x)(从b=1到e=x/2二分寻找:m=(b+e)/2, m*m最接近x时返回mid。)
