--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -34,6 +34,7 @@ Solutions of leetcode coding problems
         53.Linked List Cycle
         54.Linked List Cycle II
         55.Longest Common Prefix
+        61.Maximum Depth of Binary Tree(递归)
         .Merge Two Sorted Lists(链表排序，合并)
         .Merge k Sorted Lists(链表排序，合并)
         .Merge Sorted Array(数组排序，合并)
