--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -35,9 +35,9 @@ Solutions of leetcode coding problems
         54.Linked List Cycle II
         55.Longest Common Prefix
         61.Maximum Depth of Binary Tree(递归)
-        .Merge Two Sorted Lists(链表排序，合并)
-        .Merge k Sorted Lists(链表排序，合并)
-        .Merge Sorted Array(数组排序，合并)
+        68.Merge Two Sorted Lists(链表排序，合并)
+        66.Merge k Sorted Lists(链表排序，合并)
+        67.Merge Sorted Array(数组排序，合并)
         .Roman to Integer(扫描字符串，map到相应数字,累加.下一个根如果比当前根大(index小),则减去当前根)
         .Sort List(链表排序，归并排序)
         .Trapping Rain Water(每个柱能储水取决于两侧最高柱高度较短的和当前柱高度差。两种思路：1.DP找到每个柱的左最高和右最高；2.先找最高的柱分成两半，两边向中间算。相似26)
@@ -63,7 +63,8 @@ Solutions of leetcode coding problems
         57.Longest Palindromic Substring(递归：p[i][j] = s(i)==s(j)&&(j-i<=2||p[i+1][j-1])+贪心找最长)
         58.Longest Substring Without Repeating Characters (移动窗口：用map记录字符上次出现的位置，start记录上次没有重复的位置，maxlen贪心记录每次的无重复序列长度)
         59.Longest Valid Parentheses(用堆栈记录括号下标)
-        .Maximum Subarray (动规+贪心)
+        62.Maximum Product Subarray(动规+贪心.当前最优方案：以前最大乘以当前或以前最小乘以当前或只用当前，维护当前最大，最小)
+        63.Maximum Subarray (动规+贪心。当前最优方案：以前最优加上当前或只用当前，维护当前最大)
         .Pow(x, n)(二分：half=Pow(x, n/2); Pow(x, n)=half x half x Pow(x, n%2)， 类似33，sqrt(x))
         .Sqrt(x)(从b=1到e=x/2二分寻找:m=(b+e)/2, m*m最接近x时返回mid。)
 2. Time consuming
@@ -74,7 +75,7 @@ Solutions of leetcode coding problems
         37.Find Minimum in Rotated Sorted ArrayII(二分查找，确定递增区间，注意边界)
         44.Insert Interval(注意边界)
         45.Insertion Sort List
-        .Merge Intervals(难点：排序intervals)
+        65.Merge Intervals(难点：排序intervals)
         .Search Insert Position(二分查找，确定递增区间，注意边界)
         .Search in Rotated Sorted Array(二分查找，确定递增区间，注意边界)
         .Search in Rotated Sorted ArrayII(二分查找，确定递增区间，注意边界)
