--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -65,6 +65,7 @@ Solutions of leetcode coding problems
         59.Longest Valid Parentheses(用堆栈记录括号下标)
         62.Maximum Product Subarray(动规+贪心.当前最优方案：以前最大乘以当前或以前最小乘以当前或只用当前，维护当前最大，最小)
         63.Maximum Subarray (动规+贪心。当前最优方案：以前最优加上当前或只用当前，维护当前最大)
+        66.Minimum Depth of Binary Tree(递归，如果子指针为空，不往下)
         .Pow(x, n)(二分：half=Pow(x, n/2); Pow(x, n)=half x half x Pow(x, n%2)， 类似33，sqrt(x))
         .Sqrt(x)(从b=1到e=x/2二分寻找:m=(b+e)/2, m*m最接近x时返回mid。)
 2. Time consuming
@@ -75,6 +76,7 @@ Solutions of leetcode coding problems
         37.Find Minimum in Rotated Sorted ArrayII(二分查找，确定递增区间，注意边界)
         44.Insert Interval(注意边界)
         45.Insertion Sort List
+        64.Median of Two Sorted Arrays(二分查找，注意边界)
         65.Merge Intervals(难点：排序intervals)
         .Search Insert Position(二分查找，确定递增区间，注意边界)
         .Search in Rotated Sorted Array(二分查找，确定递增区间，注意边界)
