--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -38,6 +38,7 @@ Solutions of leetcode coding problems
         68.Merge Two Sorted Lists(链表排序，合并)
         66.Merge k Sorted Lists(链表排序，合并)
         67.Merge Sorted Array(数组排序，合并)
+        70.Minimum Path Sum(动规in-place)
         .Roman to Integer(扫描字符串，map到相应数字,累加.下一个根如果比当前根大(index小),则减去当前根)
         .Sort List(链表排序，归并排序)
         .Trapping Rain Water(每个柱能储水取决于两侧最高柱高度较短的和当前柱高度差。两种思路：1.DP找到每个柱的左最高和右最高；2.先找最高的柱分成两半，两边向中间算。相似26)
@@ -65,7 +66,7 @@ Solutions of leetcode coding problems
         59.Longest Valid Parentheses(用堆栈记录括号下标)
         62.Maximum Product Subarray(动规+贪心.当前最优方案：以前最大乘以当前或以前最小乘以当前或只用当前，维护当前最大，最小)
         63.Maximum Subarray (动规+贪心。当前最优方案：以前最优加上当前或只用当前，维护当前最大)
-        66.Minimum Depth of Binary Tree(递归，如果子指针为空，不往下)
+        69.Minimum Depth of Binary Tree(递归，如果子指针为空，不往下)
         .Pow(x, n)(二分：half=Pow(x, n/2); Pow(x, n)=half x half x Pow(x, n%2)， 类似33，sqrt(x))
         .Sqrt(x)(从b=1到e=x/2二分寻找:m=(b+e)/2, m*m最接近x时返回mid。)
 2. Time consuming
