--- a/题目分类总结.md
+++ b/题目分类总结.md
@@ -39,6 +39,7 @@ Solutions of leetcode coding problems
         66.Merge k Sorted Lists(链表排序，合并)
         67.Merge Sorted Array(数组排序，合并)
         70.Minimum Path Sum(动规in-place)
+        Path Sum 
         .Roman to Integer(扫描字符串，map到相应数字,累加.下一个根如果比当前根大(index小),则减去当前根)
         .Sort List(链表排序，归并排序)
         .Trapping Rain Water(每个柱能储水取决于两侧最高柱高度较短的和当前柱高度差。两种思路：1.DP找到每个柱的左最高和右最高；2.先找最高的柱分成两半，两边向中间算。相似26)
